--- a/terraform-project_provider.tf at main ·.html
+++ b/terraform-project_provider.tf at main ·.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0078)https://github.com/Dhivya-Dharshini191/terraform-project/blob/main/provider.tf -->
+<!-- saved from url=(0078)https://https://github.com/Nesamanijenakaipandiyan/terraform-project/edit/main/terraform-project_provider.tf%20at%20main%20%C2%B7.html#L2C35-L2C104 -->
 <html lang="en" data-color-mode="auto" data-light-theme="light" data-dark-theme="dark" data-a11y-animated-images="system" data-a11y-link-underlines="true" data-turbo-loaded=""><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style type="text/css">.turbo-progress-bar {
   position: fixed;
   display: block;
